Fix border radius on ::after overlays & pressDownBtn margin bug + change alert z-index

--- a/src/styles/overlayLeftBtn.css
+++ b/src/styles/overlayLeftBtn.css
@@ -18,6 +18,7 @@
     position: absolute;
     top: 50%;
     left: 0;
+    border-radius: 6px;
     transform: translate(-101%, -50%);
     width: 100%;
     height: 100%;
