--- a/src/styles/snapLeftBtn.css
+++ b/src/styles/snapLeftBtn.css
@@ -15,6 +15,7 @@
     bottom: 0;
     width: 100%;
     height: 100%;
+    border-radius: 6px;
     transform: translateX(-101%);
     background:hsl(243, 80%, 62%);
     transition: transform .25s ease-in;
